...
            "state" : "translated",
            "value" : "Cliente"
          }
        }
      }
    },
    "Clientes" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Clientes"
          }
...
            "state" : "translated",
            "value" : "Información de la empresa"
          }
        }
      }
    },
    "Company Name" : {
      "comment" : "Company name field",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Company Name"
...
            "state" : "translated",
            "value" : "Duplicar"
          }
        }
      }
    },
    "Duplicar este mes" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Duplicar este mes"
...
        }
      }
    },
    "facturado" : {

    },
    "Facturar" : {
      "comment" : "A button that triggers the creation of a new invoice for a given client.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Facturar"
          }
        }
      }
    },
    "Facturas" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Facturas"
          }
...
            "state" : "translated",
            "value" : "Filtros"
          }
        }
      }
    },
    "Finish Setup" : {
      "comment" : "Finish onboarding button",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Finish Setup"
...
            "state" : "translated",
            "value" : "Ingresos cobrados por mes"
          }
        }
      }
    },
    "Inicio" : {
      "comment" : "The title of the home view.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Marcar enviada"
          }
        }
      }
    },
    "Mas" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mas"
          }
...

    },
    "Sincronizar y regenerar" : {
      "comment" : "A button that regenerates the PDF when the invoice is synchronized with the server.",
      "isCommentAutoGenerated" : true
    },
    "Skip" : {
      "comment" : "Skip onboarding button",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Skip"
...
